--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="fecha_hint">Fecha de nacimiento</string>
     <string name="email_hint">Correo</string>
     <string name="telefono_hint">Telefono</string>
+    <string name="rol_hint">Rol</string>
 </resources>
